criacao dos grupos
