# src/controllers/interfaces/groups.ts
@@ -1,0 +1,8 @@
+export interface IGroups {
+  nomeGrupo: string
+  codGrupo: string
+  responsavel: {
+    nome: string
+    id: string
+  }
+}
