# src/controllers/user/getUserPerID.ts
@@ -1,19 +1,13 @@
 import { Controller, Get, Route, Tags, Path } from 'tsoa'
 import { User } from '../../models/user'
 import { IUser } from '../interfaces/user'
-
-interface IResponse {
-  message?: string
-  code: number
-  user?: IUser
-  error?: any
-}
+import { Response } from '../interfaces/response'
 
 @Route('users')
 @Tags('Users')
 export class GetUserPerID extends Controller {
   @Get("/get/{id}")
-  static async getUserPerID(@Path() id: string): Promise<IResponse> {
+  static async getUserPerID(@Path() id: string): Promise<Response<{ user?: IUser }>> {
     return User.findById(id)
       .then((user) => {
         if (!user) {
@@ -25,7 +19,7 @@ export class GetUserPerID extends Controller {
 
         return {
           code: 200,
-          user: user.toObject() as IUser
+          user: user.toObject()
         }
       })
       .catch((err) => {
